Add products and categories to troubleshoot error

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,11 +10,13 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+<div class="overlay">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 {{ products }}
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
