--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,3 +93,13 @@ body {
         padding-top: 164px;
     }
 }
+
+/* Add padding-top to navbar-collapse on mobile screens */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+    body {
+        height: calc(100vh - 116px);
+    }
+}
