--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 <h1>{% trans "Account Inactive" %}</h1>
+{% block inner_content %}
+<hr>
+
+<h2 class="logo-font mb-4">{% trans "Account Inactive" %}</h2>
+<hr>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
