--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,9 +1,3 @@
-
-
-body {
-    background-color: #000;
-}
-
 #profile-update-form .form-control {
     color: #000;
 }
@@ -19,4 +13,8 @@ body {
 
 #id_default_country option:first-child {
     color: #aab7c4;
+}
+
+#profile-container {
+    background-co
 }
